###################################
# CMakeLists.txt for engine/tools #
###################################

ADD_SUBDIRECTORY(hbsp)
ADD_SUBDIRECTORY(hcollate)
ADD_SUBDIRECTORY(hcsg)
ADD_SUBDIRECTORY(hdetail)
ADD_SUBDIRECTORY(hdivide)
ADD_SUBDIRECTORY(hexpand)
ADD_SUBDIRECTORY(hflood)
ADD_SUBDIRECTORY(hlight)
ADD_SUBDIRECTORY(hnav)
ADD_SUBDIRECTORY(hobsp)
ADD_SUBDIRECTORY(hoportal)
ADD_SUBDIRECTORY(hportal)
ADD_SUBDIRECTORY(hvis)
ADD_SUBDIRECTORY(mef2input)
